# tinge-c

./: .gitignore  README.md  deps.toml  devcontainer.json  readme.md
.github/workflows/: build_linux.yml
src/: .gitignore  CMakeLists.txt  run.sh
src/examples/: CMakeLists.txt  main.c
src/include/tinge/: tinge.h
src/lib/: CMakeLists.txt  tinge.c
